# brainshare

./: .cursorignore  .cursorrules  .env.example  .gitignore  LICENSE  README.md  brainshare-llm.code-workspace  brainshare-metabolism.code-workspace  brainshare-osprey.code-workspace  brainshare.code-workspace  brainshare.yml  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: fly.yml  functions.yml  functions.yml.todo  pgtap.yml  tests.yml
.husky/: pre-commit
app-frontend/: README.md
app-frontend/react-18/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
atlas/: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.redis  Dockerfile.server  Dockerfile.worker  README.md  app.py  fly.redis.toml  fly.server.toml  fly.toml  fly.worker.toml  llm.ipynb  llm.py  main.py  mypy.ini  pyproject.toml
backend/backend/: ai.py  auth.py  chat.py  config.py  crossref.py  dataset.py  db.py  deploy.py  doc.py  file.py  functions.py  main.py  models.py  resource.py  schemas.py  suggest.py  tasks.py  test_ai.py  test_main.py  util.py
backend/backend/routers/: suggest_widget.py  widgets.py
backend/backend/suggest/: __init__.py  custom_type.py  identify.py  widget.py
backend/backend/test/: conftest.py  mock.py  test_ai.py  test_ai_real.py  test_file.py  test_main.py  test_util.py
backend/backend/utils/: task.py
backend/fly-debugger/: Dockerfile  Procfile
backend/notebooks/: load-pdb.ipynb
backend/test_data/: s41540-017-0013-4.txt
brainshare-py/: pyproject.toml
brainshare-py/brainshare/: __init__.py  auth.py  config.py  context.py  db.py  display_config.py  error.py  main.py  models.py  resource.py  supabase.py  sync.py  utils.py
components/: package-lock.json  package.json
components/src/: button.tsx  container.tsx  fonts.tsx  stack.tsx  typography.tsx
cron/: 1-pg-maintenance
data_seed/: ChEBI_48950.sdf
example-data/: README.md  flat-ui__data-Fri Dec 27 2024.csv  max-yield_for-fluxes_12-09-04_15_45_58 trimmed.csv  max-yield_for-fluxes_12-09-04_15_45_58.csv  sample_data_random_extended_old.csv
examples/genome-scale-model/: README.md  create-a-model.ipynb  pyproject.toml
examples/meteng/: optSwapA_glc-etoh-3KOs-anaer-thKO_12-08-06_15_40_30.csv
frontend/: .env.example  .env.local.example  README.md  components.json  eslint.config.mjs  mdx-components.tsx  middleware.ts  next.config.mjs  openapi-ts.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/brainshare-metabolism/: package.json
frontend/public/: index.html
frontend/src/: App.tsx  ChatUI.tsx  basename.ts  database.types.ts  databaseExtended.types.ts  display-config.json  displayConfig.ts  displayConfigGraph.ts  hey-api.ts  index.css  index.tsx  middleware.ts  supabase.tsx  supabaseClient.ts  supabaseClient.tsx  theme.ts  useEventSource.ts
genome-example/: .env.example  pyproject.toml
genome-example/notebooks/: deploy.ipynb
notebooks/: llm.ipynb  requirements.txt
notebooks/test_data/: 2303.02248.txt  s41586-022-05157-3.txt
pulumi/: Pulumi.yaml  README.md  index.ts  package-lock.json  package.json
pulumi/health_check/: error.html  index.html
pulumi/test_files/: error.html  index.html
schema/: 1-setup.sql
scripts/: sqlalchemy-generate-types.sh  supabase-start.sh
seed_data/: chemical.tsv  chemical_history.tsv  chemicals.tsv  protein.tsv  reaction.tsv  reactions.tsv  species.tsv  stoichiometries.tsv  stoichiometry.tsv  synonym.tsv
seed_data_graph/: edge.pickle  node.pickle  node_history.pickle
supabase/: .env.example  .gitignore  README.md  config.toml  package-lock.json  package.json  seed.config.ts  seed.sql  seed.ts  tests.sql
supabase/.snaplet/: dataModel.json
supabase/functions/: .env.example  README.md
supabase/migrations/: 0001_auth.sql  0002_notes.sql  0003_files.sql  0003_project.sql  0003_tasks.sql  0004_apps.sql  0004_files.sql  0005_apps.sql  0006_tools.sql  0007_table_identifications.sql  0008_custom_types.sql  0009_unique_custom_type_name.sql  0010_storage_limit.sql  0011_table_widgets.sql  20220904200444_test.sql  20220904202204_remote_commit.sql  20220906232144_remote_commit.sql  20220906234226_chemical.sql  20220906234226_remote_commit.sql  20220906234226_tables.sql  20220919031118_synonym.sql  20221010181915_anon-read.sql  20221010181915_storage.sql  20221021183237_search-function.sql  20221024041142_trigram-search.sql  20221025160451_pgtap.sql  20221026183514_trigram-search-json.sql  20221026233734_trigram-search-length.sql  20221027010207_gin-index.sql  20221027023136_search-use-index.sql  20221029024129_species.sql  20221029024130_display-config.sql  20221122054212_write-species.sql  20221122141504_notes.sql  20221206044108_reaction.sql  20230101002243_drop-display-config.sql  20230101214927_long-inchi.sql  20230106052635_rank.sql  20230107191313_search-sorted.sql  20230108045630_reaction-hash-unique-species.sql  (+32 more)
supabase/migrations_live/: README.md
supabase/migrations_squashed/: 20230203221503_genomes.sql  20230203224026_drop-notes.sql  20230224182439_chemical-history.sql  20230224224553_all-history.sql  20230226182254_roles.sql  20230227212441_chemical-history2.sql  20230227215716_chemical_indexes.sql  20230227230637_drop-inchi-search.sql  20230227233518_chemical-create-trigger.sql  20230228024139_latest.sql  20230301215300_standard-reaction-history.sql  20230317213119_embeddings-content.sql  20230420215137_articles.sql  20230706230634_ilike-synonym-search.sql  20230707231443_search-filter.sql  20230712060802_graph_no_public.sql  20230716051654_pg_jsonschema.sql  20230721191220_graph-name-template.sql  20230724050004_graph-edge-hash.sql  20230724060925_graph-search.sql  20230724074337_graph-search-materialized-view.sql  20230725054231_graph-search-synonyms.sql  20230728021904_edge-indices.sql  20230728055059_graph-comin-up.sql  20230812190108_files.sql  20230817222704_file-mime-type.sql  20230822152704_latest-task-id.sql  20231012223917_external-connections.sql  20231017210551_synced-folders.sql  20231109195131_projects.sql  (+5 more)
(+397 files in other folders)
