[tool.black]
line-length = 100

[tool.poetry]
name = "backend"
version = "0.2.0"
description = ""
authors = ["Zachary King <zaking17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = { extras = ["redis"], version = "^5.4.0" }
fastapi = "^0.110.2"
sqlalchemy = { extras = ["asyncio", "mypy"], version = "^2.0.29" }
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pytz = "^2024.1"
sqlmodel = "^0.0.18"
pyjwt = "^2.8.0"
asyncpg = "^0.29.0"
boto3 = { extras = ["crt"], version = "^1.34.97" }
awscli = "^1.32.108"
redis = "^5.2.0"

[tool.poetry.group.testing.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"

[tool.poetry.group.dev.dependencies]
sqlacodegen = { git = "https://github.com/agronholm/sqlacodegen", branch = "master" }
#
black = "^24.4.1"
celery-types = "^0.22.0"
jupyterlab = "^4.0.0"
pandas = "^2.2.3"
psycopg2-binary = "^2.9.6"        # for codegen
types-redis = "^4.6.0.20240425"
types-boto3 = "^1.0.2"
types-pytz = "^2024.1.0.20240417"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
