[tool.black]
line-length = 100

[project]
name = "backend"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.12.9,<3.13"

dependencies = [
    "celery[redis]>=5.4.0,<6.0.0",
    "fastapi>=0.110.2,<0.111.0",
    "sqlalchemy[asyncio,mypy]>=2.0.29,<3.0.0",
    "uvicorn[standard]>=0.29.0,<0.30.0",
    "pytz>=2024.1,<2025.0",
    "sqlmodel>=0.0.18,<0.1.0",
    "pyjwt>=2.8.0,<3.0.0",
    "asyncpg>=0.29.0,<0.30.0",
    "boto3>=1.34.97,<2.0.0",
    "awscli>=1.32.108,<2.0.0",
    "redis>=5.2.0,<6.0.0",
    "more-itertools>=10.6.0",
]

[dependency-groups]
test = ["pytest>=8.1.1,<9.0.0", "pytest-asyncio>=0.23.6,<0.24.0"]
dev = [
    "black>=24.4.1,<25.0.0",
    "celery-types>=0.22.0,<0.23.0",
    "jupyterlab>=4.0.0,<5.0.0",
    "pandas>=2.2.3,<3.0.0",
    "psycopg2-binary>=2.9.6,<3.0.0",
    "types-redis>=4.6.0.20240425,<5.0.0",
    "types-boto3>=1.0.2,<2.0.0",
]

# sqlacodegen = { git = "https://github.com/agronholm/sqlacodegen", branch = "master" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
