[tool.black]
line-length = 100

[project]
name = "backend"
version = "0.3.0"
description = ""
readme = "README.md"
requires-python = ">=3.12.9,<3.13"

dependencies = [
    "celery[redis]>=5.4.0,<6",
    "fastapi>=0.110.2,<2",
    "sqlalchemy[asyncio,mypy]>=2.0.29,<3",
    "uvicorn[standard]>=0.29.0,<2",
    "pytz>=2024.1,<2025",
    "sqlmodel>=0.0.18,<2",
    "pyjwt>=2.8.0,<3",
    "asyncpg>=0.29.0,<2",
    "boto3>=1.34.97,<2",
    "awscli>=1.32.108,<2",
    "redis>=5.2.0,<6",
    "langchain-core>=0.3.34,<2",
    "langchain-anthropic>=0.3.7,<2",
    "langchain-openai>=0.3.4,<2",
]

[dependency-groups]
test = ["pytest>=8.1.1", "pytest-asyncio>=0.23.6"]
dev = [
    "black>=24.4.1",
    "celery-types>=0.22",
    "jupyterlab>=4",
    "types-redis>=4.6.0.20240425",
    "types-boto3>=1.0.2",
    "types-pytz>=2025.1.0.20250204",
    "isort>=6",
]

# sqlacodegen = { git = "https://github.com/agronholm/sqlacodegen", branch = "master" }

[tool.pytest.ini_options]
asyncio_mode = "auto"
