[tool.black]
line-length = 100

[tool.poetry]
name = "brainshare"
version = "0.1.0"
description = "A Python SDK to work with Brainshare.io"
authors = ["Zachary King <zaking17@gmail.com>"]
license = "Apache 2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
postgrest = "^0.15.0"
asyncio = "^3.4.3"
httpx = ">=0.24,<0.26"
nest-asyncio = "^1.5.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
