[tool.black]
line-length = 100

[tool.poetry]
name = "genome_example"
version = "0.1.0"
description = ""
authors = ["Zachary King <zaking17@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
black = "^24.4.1"
python = "^3.12"
gffutils = "^0.13"
brainshare = { path = "../brainshare-py", develop = true }
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
