[tool.black]
line-length = 100

[tool.poetry]
name = "genome-scale-model"
version = "0.1.0"
description = ""
authors = ["Zachary King <zaking17@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^3.5"
brainshare = {path = "../../brainshare-py", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
